--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,9 +1,13 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: fed136
-  secondary: fec503   
+  secondary: fec503
   secondary-dark: 333
   muted: 777
+  brand-yellow: FED136;
+  brand-purple: a4079c;
+  light-gray: f7f7f7;
+  medium-gray: EBEBEB;
 
 # Font Families
 font:
