Changes contact email address & settigns to localflavormktg@gmail.com

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl: ""
 # Site settings
 company_name: Local Flavor Marketing Group, LLC
 title: Design with Intention
-email: anne@localflavormarketing.com
+email: localflavormktg@gmail.com
 description: "Local Flavor Marketing Group is a small shop that helps you to tell the world your story and to give a voice to your authentic self."
 logo: /img/lf_logo.png
 medallion: /img/lf_medallion.png
